--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wipro.test">
+    package="com.android.wipro.assignment">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme" >
 
     <activity
-        android:name=".mvp.views.MainActivity"
+        android:name=".views.MainActivity"
         android:label="@string/app_name"
 
         android:configChanges="orientation|screenSize">
