--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
 
 
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
+
+
+
     //Unit test framework - Junit, Mockito, PowerMock, Robolectric, OpenPojo
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.8.9'
